feat: add container also result section

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,16 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <audio src="" id="sound"></audio>
+    <div class="container">
+      <div class="search-box">
+        <input type="text" placeholder="Type the word here." id="inp-word" />
+        <button id="search-btn">Search</button>
+      </div>
+      <div class="result" id="result"></div>
+    </div>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
